--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,10 @@ android {
     }
 }
 
+dependencies {
+    implementation fileTree(dir: 'C:\\Users\\guille\\AppData\\Local\\Android\\Sdk\\platforms\\android-34', include: ['*.aar', '*.jar'], exclude: [])
+}
+
 
 // called every time gradle gets executed, takes the native dependencies of
 // the natives configuration, and extracts them to the proper libs/ folders
