--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,10 +4,11 @@
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.BATTERY_STATS"
+        tools:ignore="ProtectedPermissions"></uses-permission>
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
-        android:icon="@android:drawable/ic_delete"
         android:isGame="true"
         android:appCategory="game"
         android:label="@string/app_name"
