--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,9 +4,8 @@
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.BATTERY_STATS"
-        tools:ignore="ProtectedPermissions"></uses-permission>
     <application
+        android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:isGame="true"
